--- a/respond2officeaction_scenario_two_ALT.html
+++ b/respond2officeaction_scenario_two_ALT.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>ALT Respond to Office Action Scenario Two :: USPTO.gov :: webapp prototype</title>
+    <title>Respond to Office Action Scenario Two :: USPTO.gov :: webapp prototype</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -99,131 +99,133 @@
                             <h1>Respond to Office Action</h1>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12">
-                        	<div class="card-text noexpand">
-                                <h2 class="card-title weight600" id="appdata">Application Data</h2>
-                            </div>
+                    <div class="card-text">
+                        <div role="heading" aria-level="2">
+                            <button type="button" class="btn btn-link Accordion-trigger" data-toggle="collapse" data-target="#applicationdata" aria-controls="applicationdata" aria-expanded="true" id="appdatabtn"><span class="glyphicon glyphicon-triangle-right visuallyremoved"></span><span class="glyphicon glyphicon-triangle-bottom"></span> Application Data</button>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12">
-                        	<div class="panel-group" aria-describedby="appdata">
-                                <div class="panel panel-default">
-                                    <div class="panel-body">
-                                        <div class="row">
-                                            <div class="col-xs-12 col-lg-4">
+                    <div id="applicationdata" class="collapse Accordion-panel in" role="region" aria-labelledby="appdatabtn">
+                    	<div class="Accordion">
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div class="panel-group">
+                                        <div class="panel panel-default">
+                                            <div class="panel-body">
                                                 <div class="row">
-                                                    <div class="col-xs-12">
-                                                        <div class="row underlinerow">
+                                                    <div class="col-xs-12 col-lg-4">
+                                                        <div class="row">
                                                             <div class="col-xs-12">
-                                                                <h3 class="weight600">Mark information</h3>
+                                                                <div class="row underlinerow">
+                                                                    <div class="col-xs-12">
+                                                                        <h3 class="weight600">Mark information</h3>
+                                                                    </div>
+                                                                </div>
+                                                            </div> 
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Serial number</h4>
                                                             </div>
-                                                        </div>
-                                                    </div> 
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Serial number</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <p><a href="#" target="_blank">87697840<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a></p>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Mark literal</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <p>PK Prep</p>
-                                                    </div> 
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Mark image</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <img src="images/standardcharacter_alt2.gif" class="img-thumbnail" alt="your mark image">                                                         			
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Goods/Services</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <p><a href="#" class="disabled">View goods/services</a></p>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Filing type</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <p><span class="uppercase">teas rf</span></p>
-                                                    </div>   
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-12 col-lg-4">
-                                                <div class="row">
-                                                    <div class="col-xs-12">
-                                                        <div class="row underlinerow">
-                                                            <div class="col-xs-12">
-                                                                <h3 class="weight600">Owner</h3>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <p><a href="#" target="_blank">87697840<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a></p>
                                                             </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Mark literal</h4>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <p>PK Prep</p>
+                                                            </div> 
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Mark image</h4>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <img src="images/standardcharacter_alt2.gif" class="img-thumbnail" alt="your mark image">                                                         			
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Goods/Services</h4>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <p><a href="#" class="disabled">View goods/services</a></p>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Filing type</h4>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <p><span class="uppercase">teas rf</span></p>
+                                                            </div>   
                                                         </div>
                                                     </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Owner of record</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <p>Pittsburgh Penguins <span class="uppercase">lp</span></p>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Email address</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <p class="email">pittsburgh&#64;penguins.com</p>
-                                                    </div> 
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Entity type</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <p>Limited Partnership</p>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Owner address</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <p>1001 Fifth Avenue<br>
-                                                        Pittsburgh, PA 15219</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-12 col-lg-4">
-                                                <div class="row">
-                                                    <div class="col-xs-12">
-                                                        <div class="row underlinerow">
+                                                    <div class="col-xs-12 col-lg-4">
+                                                        <div class="row">
                                                             <div class="col-xs-12">
-                                                                <h3 class="weight600">Attorney</h3>
+                                                                <div class="row underlinerow">
+                                                                    <div class="col-xs-12">
+                                                                        <h3 class="weight600">Owner</h3>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Owner of record</h4>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <p>Pittsburgh Penguins <span class="uppercase">lp</span></p>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Email address</h4>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <p class="email">pittsburgh&#64;penguins.com</p>
+                                                            </div> 
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Entity type</h4>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <p>Limited Partnership</p>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Owner address</h4>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <p>1001 Fifth Avenue<br>
+                                                                Pittsburgh, PA 15219</p>
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Attorney of record</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <p>Clark W. Lackert</p>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Attorney firm</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <p>Reed Smith <span class="uppercase">llp</span></p>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <h4>Docket/reference number</h4>
-                                                    </div>
-                                                    <div class="col-xs-6 col-lg-12">
-                                                        <p>259802.20006</p>
+                                                    <div class="col-xs-12 col-lg-4">
+                                                        <div class="row">
+                                                            <div class="col-xs-12">
+                                                                <div class="row underlinerow">
+                                                                    <div class="col-xs-12">
+                                                                        <h3 class="weight600">Attorney</h3>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Attorney of record</h4>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <p>Clark W. Lackert</p>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Attorney firm</h4>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <p>Reed Smith <span class="uppercase">llp</span></p>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <h4>Docket/reference number</h4>
+                                                            </div>
+                                                            <div class="col-xs-6 col-lg-12">
+                                                                <p>259802.20006</p>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                  	</div>
+                            </div><!--// data row-->
+                    	</div>
+                    </div>
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="card-text noexpand">
