--- a/dashboard.html
+++ b/dashboard.html
@@ -138,10 +138,10 @@
                 <div class="col-xs-12" id="dashsectionscontainer">
                     <h1>eFile Homepage</h1>
                     	<div class="col-xs-12 form-group form-group-md alert alert-warning" role="alert" aria-live="assertive" id="alertmin">
-                          <div class="closepans" id="minholder">
+                          <div id="minholder">
                           	<p id="mintext"></p>
-                          	<button type="button" class="close closegspanels" aria-label="close alert" id="alertbtndash"><span aria-hidden="true" class="glyphicon glyphicon-remove-circle"></span></button>
-                            <button type="button" class="close closegspanels" aria-label="close alert" id="cancelbtndash"><span aria-hidden="true" class="glyphicon glyphicon-ban-circle"></span></button>
+                          	<button type="button" class="btn-sm btn-success close closegspanels" aria-label="close alert" id="cancelbtndash">Cancel</button>
+                            <button type="button" class="btn-sm btn-success close closegspanels" aria-label="close alert" id="alertbtndash">Yes</button>
                           </div>
                         </div>
                         <div class="row">
